[gd_scene load_steps=7 format=4 uid="uid://dstjv0gdpxegq"]

[ext_resource type="TileSet" uid="uid://c0fh2yuw37u4s" path="res://Environment/tileset.tres" id="1_2qska"]
[ext_resource type="Script" uid="uid://bn7qajj62cf1e" path="res://Levels/OneLoop/TwoDoors/two_doors.gd" id="1_sg76g"]
[ext_resource type="PackedScene" uid="uid://cf2nbw1l4orcf" path="res://Player/player.tscn" id="2_mlraa"]
[ext_resource type="PackedScene" uid="uid://d0y011d078tou" path="res://Objects/Box/box.tscn" id="3_w8qjd"]
[ext_resource type="PackedScene" uid="uid://bjhkesuabemhh" path="res://Objects/Button/button.tscn" id="4_a5ecv"]
[ext_resource type="PackedScene" uid="uid://dfhxr5g4l6gg" path="res://Objects/Platforms/slide_platform.tscn" id="5_a5ecv"]

[node name="TwoDoors" type="Node2D"]
script = ExtResource("1_sg76g")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAEAAgABAAEAAAAAAAIAAgABAAEAAAAAAAMAAgABAAEAAAAAAAQAAgABAAEAAAAAAAUAAgABAAEAAAAAAAYAAgABAAEAAAAAAAcAAgABAAEAAAAAAAgAAgABAAEAAAAAAAkAAgABAAEAAAAAAAoAAgABAAEAAAAAAAsAAgABAAEAAAAAAAwAAgAAAAMAAAAAAA0AAgACAAEAAAAAAA4AAgACAAEAAAAAAA8AAgACAAEAAAAAABAAAgACAAEAAAAAABEAAgACAAEAAAAAABIAAgACAAEAAAAAABMAAgACAAEAAAAAABQAAgACAAMAAAABABQAAgABAAAAAAACABQAAgABAAAAAAADABQAAgABAAAAAAAEABQAAgABAAAAAAAFABQAAgABAAAAAAAGABQAAgABAAAAAAAHABQAAgABAAAAAAAIABQAAgABAAAAAAAJABQAAgABAAAAAAAKABQAAgABAAAAAAALABQAAgABAAAAAAAMABQAAgABAAAAAAANABQAAgABAAAAAAAOABQAAgABAAAAAAAPABQAAgABAAAAAAAQABQAAgABAAAAAAARABQAAgABAAAAAAASABQAAgABAAAAAAATABQAAgABAAAAAAAUABQAAgABAAAAAAAVABQAAgABAAAAAAAWABQAAgABAAAAAAAXABQAAgABAAAAAAAYABQAAgABAAAAAAAZABQAAgABAAAAAAAaABQAAgABAAAAAAAbABQAAgABAAAAAAAcABQAAgABAAAAAAAdABQAAgABAAAAAAAeABQAAgABAAAAAAAfABQAAgABAAAAAAAgABQAAgABAAAAAAAhABQAAgABAAAAAAAiABQAAgABAAAAAAAjABQAAgABAAAAAAAkABQAAgABAAAAAAAlABQAAgABAAAAAAAmABQAAgABAAAAAAAnABMAAgAAAAEAAAAnABIAAgAAAAEAAAAnABEAAgAAAAEAAAAnABAAAgAAAAEAAAAnAA8AAgAAAAEAAAAnAA4AAgAAAAEAAAAnAA0AAgAAAAEAAAAnAAwAAgABAAMAAAAnAAsAAgABAAEAAAAnAAoAAgABAAEAAAAnAAkAAgABAAEAAAAnAAgAAgABAAEAAAAnAAcAAgABAAEAAAAnAAYAAgABAAEAAAAnAAUAAgABAAEAAAAnAAQAAgABAAEAAAAnAAMAAgABAAEAAAAnAAIAAgABAAEAAAAnAAEAAgABAAEAAAAmAAAAAgABAAEAAAAlAAAAAgABAAEAAAAkAAAAAgABAAEAAAAjAAAAAgABAAEAAAAiAAAAAgABAAEAAAAhAAAAAgABAAEAAAAgAAAAAgABAAEAAAAfAAAAAgABAAEAAAAeAAAAAgABAAEAAAAdAAAAAgABAAEAAAAcAAAAAgABAAEAAAAbAAAAAgABAAEAAAAaAAAAAgABAAEAAAAZAAAAAgABAAEAAAAYAAAAAgABAAEAAAAXAAAAAgABAAEAAAAWAAAAAgABAAEAAAAVAAAAAgABAAEAAAAUAAAAAgABAAEAAAATAAAAAgABAAEAAAASAAAAAgABAAEAAAARAAAAAgABAAEAAAAQAAAAAgABAAEAAAAPAAAAAgABAAEAAAAOAAAAAgABAAEAAAANAAAAAgABAAEAAAAMAAAAAgABAAEAAAALAAAAAgABAAEAAAAKAAAAAgABAAEAAAAJAAAAAgABAAEAAAAIAAAAAgABAAEAAAAHAAAAAgABAAEAAAAGAAAAAgABAAEAAAAFAAAAAgABAAEAAAAEAAAAAgABAAEAAAADAAAAAgABAAEAAAACAAAAAgABAAEAAAABAAAAAgABAAEAAAAAAAAAAgABAAEAAAAnAAAAAgABAAEAAAAnABQAAgAAAAQAAAAAABUAAgABAAEAAAABABUAAgABAAEAAAACABUAAgABAAEAAAADABUAAgABAAEAAAAEABUAAgABAAEAAAAFABUAAgABAAEAAAAGABUAAgABAAEAAAAHABUAAgABAAEAAAAIABUAAgABAAEAAAAJABUAAgABAAEAAAAKABUAAgABAAEAAAALABUAAgABAAEAAAAMABUAAgABAAEAAAANABUAAgABAAEAAAAOABUAAgABAAEAAAAPABUAAgABAAEAAAAQABUAAgABAAEAAAARABUAAgABAAEAAAASABUAAgABAAEAAAATABUAAgABAAEAAAAUABUAAgABAAEAAAAVABUAAgABAAEAAAAWABUAAgABAAEAAAAXABUAAgABAAEAAAAYABUAAgABAAEAAAAZABUAAgABAAEAAAAaABUAAgABAAEAAAAbABUAAgABAAEAAAAcABUAAgABAAEAAAAdABUAAgABAAEAAAAeABUAAgABAAEAAAAfABUAAgABAAEAAAAgABUAAgABAAEAAAAhABUAAgABAAEAAAAiABUAAgABAAEAAAAjABUAAgABAAEAAAAkABUAAgABAAEAAAAlABUAAgABAAEAAAAmABUAAgABAAEAAAAnABUAAgABAAEAAAAoABUAAgABAAEAAAAoABQAAgABAAEAAAAoABMAAgABAAEAAAAoABIAAgABAAEAAAAoABEAAgABAAEAAAAoABAAAgABAAEAAAAoAA8AAgABAAEAAAAoAA4AAgABAAEAAAAoAA0AAgABAAEAAAAoAAwAAgABAAEAAAAoAAsAAgABAAEAAAAoAAoAAgABAAEAAAAoAAkAAgABAAEAAAAoAAgAAgABAAEAAAAoAAcAAgABAAEAAAAoAAYAAgABAAEAAAAoAAUAAgABAAEAAAAoAAQAAgABAAEAAAAoAAMAAgABAAEAAAAoAAIAAgABAAEAAAAoAAEAAgABAAEAAAAoAAAAAgABAAEAAAAoAP//AgABAAEAAAAnAP//AgABAAEAAAAmAP//AgABAAEAAAAlAP//AgABAAEAAAAkAP//AgABAAEAAAAjAP//AgABAAEAAAAiAP//AgABAAEAAAAhAP//AgABAAEAAAAgAP//AgABAAEAAAAfAP//AgABAAEAAAAeAP//AgABAAEAAAAdAP//AgABAAEAAAAcAP//AgABAAEAAAAbAP//AgABAAEAAAAaAP//AgABAAEAAAAZAP//AgABAAEAAAAYAP//AgABAAEAAAAXAP//AgABAAEAAAAWAP//AgABAAEAAAAVAP//AgABAAEAAAAUAP//AgABAAEAAAATAP//AgABAAEAAAASAP//AgABAAEAAAARAP//AgABAAEAAAAQAP//AgABAAEAAAAPAP//AgABAAEAAAAOAP//AgABAAEAAAANAP//AgABAAEAAAAMAP//AgABAAEAAAALAP//AgABAAEAAAAKAP//AgABAAEAAAAJAP//AgABAAEAAAAIAP//AgABAAEAAAAHAP//AgABAAEAAAAGAP//AgABAAEAAAAFAP//AgABAAEAAAAEAP//AgABAAEAAAADAP//AgABAAEAAAACAP//AgABAAEAAAABAP//AgABAAEAAAAAAP//AgABAAEAAAD/////AgABAAEAAAD//wAAAgABAAEAAAD//wEAAgABAAEAAAD//wIAAgABAAEAAAD//wMAAgABAAEAAAD//wQAAgABAAEAAAD//wUAAgABAAEAAAD//wYAAgABAAEAAAD//wcAAgABAAEAAAD//wgAAgABAAEAAAD//wkAAgABAAEAAAD//woAAgABAAEAAAD//wsAAgABAAEAAAD//wwAAgABAAEAAAD//w0AAgABAAEAAAD//w4AAgABAAEAAAD//w8AAgABAAEAAAD//xAAAgABAAEAAAD//xEAAgABAAEAAAD//xIAAgABAAEAAAD//xMAAgABAAEAAAD//xQAAgABAAEAAAD//xUAAgABAAEAAAABAAEAAgABAAEAAAABAAIAAgABAAEAAAABAAMAAgABAAEAAAABAAQAAgABAAEAAAABAAUAAgABAAEAAAABAAYAAgABAAEAAAABAAcAAgABAAEAAAABAAgAAgABAAEAAAABAAkAAgABAAEAAAABAAoAAgABAAEAAAABAAsAAgABAAEAAAABAAwAAgABAAIAAAACAAEAAgABAAEAAAACAAIAAgABAAEAAAACAAMAAgABAAEAAAACAAQAAgABAAEAAAACAAUAAgABAAEAAAACAAYAAgABAAEAAAACAAcAAgABAAEAAAACAAgAAgABAAEAAAACAAkAAgABAAEAAAACAAoAAgABAAEAAAACAAsAAgABAAEAAAACAAwAAgABAAIAAAADAAEAAgABAAEAAAADAAIAAgABAAEAAAADAAMAAgABAAEAAAADAAQAAgABAAEAAAADAAUAAgABAAEAAAADAAYAAgABAAEAAAADAAcAAgABAAEAAAADAAgAAgABAAEAAAADAAkAAgABAAEAAAADAAoAAgABAAEAAAADAAsAAgABAAEAAAADAAwAAgABAAIAAAAEAAEAAgABAAEAAAAEAAIAAgABAAEAAAAEAAMAAgABAAEAAAAEAAQAAgABAAEAAAAEAAUAAgABAAEAAAAEAAYAAgABAAEAAAAEAAcAAgABAAEAAAAEAAgAAgABAAEAAAAEAAkAAgABAAEAAAAEAAoAAgABAAEAAAAEAAsAAgABAAEAAAAEAAwAAgABAAIAAAAFAAEAAgABAAEAAAAFAAIAAgABAAEAAAAFAAMAAgABAAEAAAAFAAQAAgABAAEAAAAFAAUAAgABAAEAAAAFAAYAAgABAAEAAAAFAAcAAgABAAEAAAAFAAgAAgABAAEAAAAFAAkAAgABAAEAAAAFAAoAAgABAAEAAAAFAAsAAgABAAEAAAAFAAwAAgABAAIAAAAGAAEAAgABAAEAAAAGAAIAAgABAAEAAAAGAAMAAgABAAEAAAAGAAQAAgABAAEAAAAGAAUAAgABAAEAAAAGAAYAAgABAAEAAAAGAAcAAgABAAEAAAAGAAgAAgABAAEAAAAGAAkAAgABAAEAAAAGAAoAAgABAAEAAAAGAAsAAgABAAEAAAAGAAwAAgABAAIAAAAHAAEAAgABAAEAAAAHAAIAAgABAAEAAAAHAAMAAgABAAEAAAAHAAQAAgABAAEAAAAHAAUAAgABAAEAAAAHAAYAAgABAAEAAAAHAAcAAgABAAEAAAAHAAgAAgABAAEAAAAHAAkAAgABAAEAAAAHAAoAAgABAAEAAAAHAAsAAgABAAEAAAAHAAwAAgABAAIAAAAIAAEAAgABAAEAAAAIAAIAAgABAAEAAAAIAAMAAgABAAEAAAAIAAQAAgABAAEAAAAIAAUAAgABAAEAAAAIAAYAAgABAAEAAAAIAAcAAgABAAEAAAAIAAgAAgABAAEAAAAIAAkAAgABAAEAAAAIAAoAAgABAAEAAAAIAAsAAgABAAEAAAAIAAwAAgABAAIAAAAJAAEAAgABAAEAAAAJAAIAAgABAAEAAAAJAAMAAgABAAEAAAAJAAQAAgABAAEAAAAJAAUAAgABAAEAAAAJAAYAAgABAAEAAAAJAAcAAgABAAEAAAAJAAgAAgABAAEAAAAJAAkAAgABAAEAAAAJAAoAAgABAAEAAAAJAAsAAgABAAEAAAAJAAwAAgABAAIAAAAKAAEAAgABAAEAAAAKAAIAAgABAAEAAAAKAAMAAgABAAEAAAAKAAQAAgABAAEAAAAKAAUAAgABAAEAAAAKAAYAAgABAAEAAAAKAAcAAgABAAEAAAAKAAgAAgABAAEAAAAKAAkAAgABAAEAAAAKAAoAAgABAAEAAAAKAAsAAgABAAEAAAAKAAwAAgABAAIAAAALAAEAAgABAAEAAAALAAIAAgABAAEAAAALAAMAAgABAAEAAAALAAQAAgABAAEAAAALAAUAAgABAAEAAAALAAYAAgABAAEAAAALAAcAAgABAAEAAAALAAgAAgABAAEAAAALAAkAAgABAAEAAAALAAoAAgABAAEAAAALAAsAAgABAAEAAAALAAwAAgABAAIAAAAMAAEAAgABAAEAAAAMAAIAAgABAAEAAAAMAAMAAgABAAEAAAAMAAQAAgABAAEAAAAMAAUAAgABAAEAAAAMAAYAAgABAAEAAAAMAAcAAgABAAEAAAAMAAgAAgABAAEAAAAMAAkAAgABAAEAAAAMAAoAAgABAAEAAAAMAAsAAgABAAEAAAAMAAwAAgABAAIAAAANAAEAAgABAAEAAAANAAIAAgABAAEAAAANAAMAAgABAAEAAAANAAQAAgABAAEAAAANAAUAAgABAAEAAAANAAYAAgABAAEAAAANAAcAAgABAAEAAAANAAgAAgABAAEAAAANAAkAAgABAAEAAAANAAoAAgABAAEAAAANAAsAAgABAAEAAAANAAwAAgABAAIAAAAOAAEAAgABAAEAAAAOAAIAAgABAAEAAAAOAAMAAgABAAEAAAAOAAQAAgABAAEAAAAOAAUAAgABAAEAAAAOAAYAAgABAAEAAAAOAAcAAgABAAEAAAAOAAgAAgABAAEAAAAOAAkAAgABAAEAAAAOAAoAAgABAAEAAAAOAAsAAgABAAEAAAAOAAwAAgABAAIAAAAPAAEAAgABAAEAAAAPAAIAAgABAAEAAAAPAAMAAgABAAEAAAAPAAQAAgABAAEAAAAPAAUAAgABAAEAAAAPAAYAAgABAAEAAAAPAAcAAgABAAEAAAAPAAgAAgABAAEAAAAPAAkAAgABAAEAAAAPAAoAAgABAAEAAAAPAAsAAgABAAEAAAAPAAwAAgABAAIAAAAQAAEAAgABAAEAAAAQAAIAAgABAAEAAAAQAAMAAgABAAEAAAAQAAQAAgABAAEAAAAQAAUAAgABAAEAAAAQAAYAAgABAAEAAAAQAAcAAgABAAEAAAAQAAgAAgABAAEAAAAQAAkAAgABAAEAAAAQAAoAAgABAAEAAAAQAAsAAgABAAEAAAAQAAwAAgABAAIAAAARAAEAAgABAAEAAAARAAIAAgABAAEAAAARAAMAAgABAAEAAAARAAQAAgABAAEAAAARAAUAAgABAAEAAAARAAYAAgABAAEAAAARAAcAAgABAAEAAAARAAgAAgABAAEAAAARAAkAAgABAAEAAAARAAoAAgABAAEAAAARAAsAAgABAAEAAAARAAwAAgABAAIAAAASAAEAAgABAAEAAAASAAIAAgABAAEAAAASAAMAAgABAAEAAAASAAQAAgABAAEAAAASAAUAAgABAAEAAAASAAYAAgABAAEAAAASAAcAAgABAAEAAAASAAgAAgABAAEAAAASAAkAAgABAAEAAAASAAoAAgABAAEAAAASAAsAAgABAAEAAAASAAwAAgABAAIAAAATAAEAAgABAAEAAAATAAIAAgABAAEAAAATAAMAAgABAAEAAAATAAQAAgABAAEAAAATAAUAAgABAAEAAAATAAYAAgABAAEAAAATAAcAAgABAAEAAAATAAgAAgABAAEAAAATAAkAAgABAAEAAAATAAoAAgABAAEAAAATAAsAAgABAAEAAAATAAwAAgABAAIAAAAUAAEAAgABAAEAAAAUAAIAAgABAAEAAAAUAAMAAgABAAEAAAAUAAQAAgABAAEAAAAUAAUAAgABAAEAAAAUAAYAAgABAAEAAAAUAAcAAgABAAEAAAAUAAgAAgABAAEAAAAUAAkAAgABAAEAAAAUAAoAAgABAAEAAAAUAAsAAgABAAEAAAAUAAwAAgABAAIAAAAVAAEAAgABAAEAAAAVAAIAAgABAAEAAAAVAAMAAgABAAEAAAAVAAQAAgABAAEAAAAVAAUAAgABAAEAAAAVAAYAAgABAAEAAAAVAAcAAgABAAEAAAAVAAgAAgABAAEAAAAVAAkAAgABAAEAAAAVAAoAAgABAAEAAAAVAAsAAgABAAEAAAAVAAwAAgABAAIAAAAWAAEAAgABAAEAAAAWAAIAAgABAAEAAAAWAAMAAgABAAEAAAAWAAQAAgABAAEAAAAWAAUAAgABAAEAAAAWAAYAAgABAAEAAAAWAAcAAgABAAEAAAAWAAgAAgABAAEAAAAWAAkAAgABAAEAAAAWAAoAAgABAAEAAAAWAAsAAgABAAEAAAAWAAwAAgABAAIAAAAXAAEAAgABAAEAAAAXAAIAAgABAAEAAAAXAAMAAgABAAEAAAAXAAQAAgABAAEAAAAXAAUAAgABAAEAAAAXAAYAAgABAAEAAAAXAAcAAgABAAEAAAAXAAgAAgABAAEAAAAXAAkAAgABAAEAAAAXAAoAAgABAAEAAAAXAAsAAgABAAEAAAAXAAwAAgABAAIAAAAYAAEAAgABAAEAAAAYAAIAAgABAAEAAAAYAAMAAgABAAEAAAAYAAQAAgABAAEAAAAYAAUAAgABAAEAAAAYAAYAAgABAAEAAAAYAAcAAgABAAEAAAAYAAgAAgABAAEAAAAYAAkAAgABAAEAAAAYAAoAAgABAAEAAAAYAAsAAgABAAEAAAAYAAwAAgABAAIAAAAZAAEAAgABAAEAAAAZAAIAAgABAAEAAAAZAAMAAgABAAEAAAAZAAQAAgABAAEAAAAZAAUAAgABAAEAAAAZAAYAAgABAAEAAAAZAAcAAgABAAEAAAAZAAgAAgABAAEAAAAZAAkAAgABAAEAAAAZAAoAAgABAAEAAAAZAAsAAgABAAEAAAAZAAwAAgABAAIAAAAaAAEAAgABAAEAAAAaAAIAAgABAAEAAAAaAAMAAgABAAEAAAAaAAQAAgABAAEAAAAaAAUAAgABAAEAAAAaAAYAAgABAAEAAAAaAAcAAgABAAEAAAAaAAgAAgABAAEAAAAaAAkAAgABAAEAAAAaAAoAAgABAAEAAAAaAAsAAgABAAEAAAAaAAwAAgABAAIAAAAbAAEAAgABAAEAAAAbAAIAAgABAAEAAAAbAAMAAgABAAEAAAAbAAQAAgABAAEAAAAbAAUAAgABAAEAAAAbAAYAAgABAAEAAAAbAAcAAgABAAEAAAAbAAgAAgABAAEAAAAbAAkAAgABAAEAAAAbAAoAAgABAAEAAAAbAAsAAgABAAEAAAAbAAwAAgABAAIAAAAcAAEAAgABAAEAAAAcAAIAAgABAAEAAAAcAAMAAgABAAEAAAAcAAQAAgABAAEAAAAcAAUAAgABAAEAAAAcAAYAAgABAAEAAAAcAAcAAgABAAEAAAAcAAgAAgABAAEAAAAcAAkAAgABAAEAAAAcAAoAAgABAAEAAAAcAAsAAgABAAEAAAAcAAwAAgABAAIAAAAdAAEAAgABAAEAAAAdAAIAAgABAAEAAAAdAAMAAgABAAEAAAAdAAQAAgABAAEAAAAdAAUAAgABAAEAAAAdAAYAAgABAAEAAAAdAAcAAgABAAEAAAAdAAgAAgABAAEAAAAdAAkAAgABAAEAAAAdAAoAAgABAAEAAAAdAAsAAgABAAEAAAAdAAwAAgABAAIAAAAeAAEAAgABAAEAAAAeAAIAAgABAAEAAAAeAAMAAgABAAEAAAAeAAQAAgABAAEAAAAeAAUAAgABAAEAAAAeAAYAAgABAAEAAAAeAAcAAgABAAEAAAAeAAgAAgABAAEAAAAeAAkAAgABAAEAAAAeAAoAAgABAAEAAAAeAAsAAgABAAEAAAAeAAwAAgABAAIAAAAfAAEAAgABAAEAAAAfAAIAAgABAAEAAAAfAAMAAgABAAEAAAAfAAQAAgABAAEAAAAfAAUAAgABAAEAAAAfAAYAAgABAAEAAAAfAAcAAgABAAEAAAAfAAgAAgABAAEAAAAfAAkAAgABAAEAAAAfAAoAAgABAAEAAAAfAAsAAgABAAEAAAAfAAwAAgABAAIAAAAgAAEAAgABAAEAAAAgAAIAAgABAAEAAAAgAAMAAgABAAEAAAAgAAQAAgABAAEAAAAgAAUAAgABAAEAAAAgAAYAAgABAAEAAAAgAAcAAgABAAEAAAAgAAgAAgABAAEAAAAgAAkAAgABAAEAAAAgAAoAAgABAAEAAAAgAAsAAgABAAEAAAAgAAwAAgABAAIAAAAhAAEAAgABAAEAAAAhAAIAAgABAAEAAAAhAAMAAgABAAEAAAAhAAQAAgABAAEAAAAhAAUAAgABAAEAAAAhAAYAAgABAAEAAAAhAAcAAgABAAEAAAAhAAgAAgABAAEAAAAhAAkAAgABAAEAAAAhAAoAAgABAAEAAAAhAAsAAgABAAEAAAAhAAwAAgABAAIAAAAiAAEAAgABAAEAAAAiAAIAAgABAAEAAAAiAAMAAgABAAEAAAAiAAQAAgABAAEAAAAiAAUAAgABAAEAAAAiAAYAAgABAAEAAAAiAAcAAgABAAEAAAAiAAgAAgABAAEAAAAiAAkAAgABAAEAAAAiAAoAAgABAAEAAAAiAAsAAgABAAEAAAAiAAwAAgABAAIAAAAjAAEAAgABAAEAAAAjAAIAAgABAAEAAAAjAAMAAgABAAEAAAAjAAQAAgABAAEAAAAjAAUAAgABAAEAAAAjAAYAAgABAAEAAAAjAAcAAgABAAEAAAAjAAgAAgABAAEAAAAjAAkAAgABAAEAAAAjAAoAAgABAAEAAAAjAAsAAgABAAEAAAAjAAwAAgABAAIAAAAkAAEAAgABAAEAAAAkAAIAAgABAAEAAAAkAAMAAgABAAEAAAAkAAQAAgABAAEAAAAkAAUAAgABAAEAAAAkAAYAAgABAAEAAAAkAAcAAgABAAEAAAAkAAgAAgABAAEAAAAkAAkAAgABAAEAAAAkAAoAAgABAAEAAAAkAAsAAgABAAEAAAAkAAwAAgABAAIAAAAlAAEAAgABAAEAAAAlAAIAAgABAAEAAAAlAAMAAgABAAEAAAAlAAQAAgABAAEAAAAlAAUAAgABAAEAAAAlAAYAAgABAAEAAAAlAAcAAgABAAEAAAAlAAgAAgABAAEAAAAlAAkAAgABAAEAAAAlAAoAAgABAAEAAAAlAAsAAgABAAEAAAAlAAwAAgABAAIAAAAmAAEAAgABAAEAAAAmAAIAAgABAAEAAAAmAAMAAgABAAEAAAAmAAQAAgABAAEAAAAmAAUAAgABAAEAAAAmAAYAAgABAAEAAAAmAAcAAgABAAEAAAAmAAgAAgABAAEAAAAmAAkAAgABAAEAAAAmAAoAAgABAAEAAAAmAAsAAgABAAEAAAAmAAwAAgABAAIAAAA=")
tile_set = ExtResource("1_2qska")

[node name="Player" parent="." instance=ExtResource("2_mlraa")]
position = Vector2(45, 318)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 635
limit_bottom = 335

[node name="Box" parent="." instance=ExtResource("3_w8qjd")]
position = Vector2(104, 300)

[node name="Button1" parent="." instance=ExtResource("4_a5ecv")]
position = Vector2(169, 320)

[node name="Button2" parent="." instance=ExtResource("4_a5ecv")]
position = Vector2(231, 320)

[node name="SlidePlatform1" parent="." instance=ExtResource("5_a5ecv")]
position = Vector2(371, 272)
rotation = 1.5708
scale = Vector2(1.5, 1)

[node name="Endpoint" parent="SlidePlatform1" index="0"]
position = Vector2(371, 136)

[node name="SlidePlatform2" parent="." instance=ExtResource("5_a5ecv")]
position = Vector2(445, 272)
rotation = 1.5708
scale = Vector2(1.5, 1)

[node name="Endpoint" parent="SlidePlatform2" index="0"]
position = Vector2(445, 136)

[connection signal="just_pressed" from="Button1" to="." method="_on_button_1_just_pressed"]
[connection signal="just_unpressed" from="Button1" to="." method="_on_button_1_just_unpressed"]
[connection signal="just_pressed" from="Button2" to="." method="_on_button_2_just_pressed"]
[connection signal="just_unpressed" from="Button2" to="." method="_on_button_2_just_unpressed"]

[editable path="SlidePlatform1"]
[editable path="SlidePlatform2"]
